--- a/ImageTagger/ImageTagger/MainWindow.xaml
+++ b/ImageTagger/ImageTagger/MainWindow.xaml
@@ -90,7 +90,7 @@
                                     <ColumnDefinition />
                                     <ColumnDefinition Width="auto" />
                                 </Grid.ColumnDefinitions>
-                                <Label Content="Ignore Words" Margin="4"/>
+                                <Label Content="Ignore Words (Session)" Margin="4" ToolTip="Session based ignore keywords"/>
                                 <TextBox x:Name="ignoreWordtxt" Grid.Column="1" Margin="4"/>
                                 <Button x:Name="ignoreWordbtn" Grid.Column="2" Content="Add" Margin="4" Width="75" 
                                         Command="{Binding AddIgnoreTagCommand}"
